--- a/static/oas/iot/iot.yaml
+++ b/static/oas/iot/iot.yaml
@@ -20,7 +20,7 @@ tags:
 paths:
   /pub/v4.0/device:
     get:
-      description: Get a list of device details for the device with the specified MAC address
+      description: 'Get a list of device details for the device with the specified MAC address. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: device-detail
       security:
       - X-Key-Id:  []
@@ -74,7 +74,7 @@ paths:
 
   /pub/v4.0/device/list:
     get:
-      description: Get a list of all the devices in your IoT Security inventory.
+      description: 'Get a list of all the devices in your IoT Security inventory. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: device-inventory
       security:
       - X-Key-Id:  []
@@ -174,7 +174,7 @@ paths:
 
   /pub/v4.0/alert/list:
     get:
-      description: Get a list of security alerts.
+      description: 'Get a list of security alerts. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: alert-list
       security:
       - X-Key-Id:  []
@@ -264,7 +264,7 @@ paths:
 
   /pub/v4.0/alert/update:
     put:
-      description: Resolve a security alert.
+      description: 'Resolve a security alert. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: alert-resolve
       security:
       - X-Key-Id:  []
@@ -350,7 +350,7 @@ paths:
 
   /pub/v4.0/vulnerability/list:
     get:
-      description: Get a list of security alerts.
+      description: 'Get a list of security alerts. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: vulnerability-list
       security:
       - X-Key-Id:  []
@@ -434,7 +434,7 @@ paths:
 
   /pub/v4.0/vulnerability/update:
     put:
-      description: Mark one or more instances of a vulnerability as resolved.
+      description: 'Mark one or more instances of a vulnerability as resolved. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: vulnerability-resolve
       security:
       - X-Key-Id:  []
