--- a/static/oas/iot/iot.yaml
+++ b/static/oas/iot/iot.yaml
@@ -765,6 +765,100 @@ paths:
                 resolveSecurityAlertResponseExample:
                   $ref: '#/components/examples/ServerErrorResponseExample'
 
+  /pub/v4.0/xsoar/status:
+    post:
+      description: 'Receiving Xsoar Playbook status. <br/> <b>Default Rate limiting<b/>: 180 times per minute'
+      operationId: xsoar-playbook-status
+      security:
+      - X-Key-Id:  []
+        X-Access-Key: []
+      summary: Xsoar Playbook Status
+      tags:
+        - IoT Public API
+      parameters:
+        - description: The customer ID specifies the API call for a specific tenant.
+          in: query
+          name: customerid
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - status
+                - timestamp
+                - integration_name
+                - playbook_name
+              properties:
+                status:
+                  type: string
+                  description: 'The Xsoar Playbook status. Possible values: [error, success, disabled].'
+                timestamp:
+                  type: integer
+                  description: 'The timestamp of sending the status to cloud side.'
+                integration_name:
+                  type: string
+                  description: 'The third-party integration name of the playbook.'
+                playbook_name:
+                  type: string
+                  description: 'The Xsoar Playbook name.'
+                message:
+                  type: string
+                  description: 'The messages received from Xsoar Playbook.'
+                custom_integration_name:
+                  type: string
+                  description: 'The custom integration name.'
+            examples:
+              payloadExample:
+                summary: An example of payload of sending Xsoar Playbook status
+                value:
+                  status: error
+                  integration_name: servicenow
+                  playbook_name: Bulk Export Devices to ServiceNow - PANW IoT 3rd Party Integration
+                  message: Failed to do a bulk device sync to ServiceNow. Please see the detailed error message from the playbook
+                  timestamp: 1626827123
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  resceived:
+                    type: string
+                    description: Confirmation from cloud side.
+              examples:
+                value: {
+                  received: 'yes'
+                }
+        '4XX':
+          description: Client Error Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                Bad Request:
+                  $ref: '#/components/examples/BadRequestResponseExample'
+                Unauthrorized Request:
+                  $ref: '#/components/examples/UnauthorizedResponseExample'
+          '5XX':
+            description: Server Error Response
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResponse'
+                examples:
+                  resolveSecurityAlertResponseExample:
+                    $ref: '#/components/examples/ServerErrorResponseExample'
+
+
+
 components:
   securitySchemes:
     X-Key-Id:
