add deviced to schema and example

--- a/static/oas/iot/components/examples.yaml
+++ b/static/oas/iot/components/examples.yaml
@@ -296,6 +296,7 @@ examples:
     value: {
       devicelist: [
         {
+          deviceid: 'sample deviceid',
           location: 'sample location',
           switch_ip: 'sample switch ip',
           switch_name: 'sample switch name',
