--- a/.github/workflows/deploy-live.yml
+++ b/.github/workflows/deploy-live.yml
@@ -57,5 +57,6 @@ jobs:
             firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PAN_DEV_F1B58 }}'
             projectId: pan-dev-f1b58
             channelId: live
+            target: panos.pan.dev
           env:
             FIREBASE_CLI_PREVIEWS: hostingchannels
