--- a/static/oas/iot/api/public/tagList.yaml
+++ b/static/oas/iot/api/public/tagList.yaml
@@ -5,7 +5,7 @@ parameters:
   required: true
   schema:
     type: string
-- description: The tag type mentions type of tag.
+- description: The type identifies the tag as either a system-defined tag or a custom tag.
   in: query
   name: type
   required: false  
